app core com html de home e login

--- a/projeto/core/templates/core/home.html
+++ b/projeto/core/templates/core/home.html
@@ -11,9 +11,9 @@
 
 {% if user.is_authenticated %}
       <center>
-            <h2>Sistema de Gestão de Atas</h2>
+            <h2>Sistema de Empréstimo de Objetos Pessoais - SEOP</h2>
             <h3>Laboratório de Práticas<br>
-                Disciplina Tópicos Avançados em Informática I
+                Disciplina Programação Python-Django - SI
             </h3>
 	</center>
 {% endif %}
