--- a/projeto/core/templates/registration/login.html
+++ b/projeto/core/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% load bootstrap3 %}
 {% load static %}  
 
-{% block title %}TFG Online UFN / Login{% endblock %}
+{% block title %}SEOP/ Login{% endblock %}
 
 {% block content %}
     <div class="row">
@@ -13,7 +13,7 @@
               <img src="{% static 'core/img/logoUFN_hor.jpg' %}"
                    class="img-responsive" style="max-width: 200px;">
               <br>
-              <h3>Sistema de Gestão de Atas</h3>
+              <h3>Sistema de Empréstimo de Objetos Pessoais</h3>
             </center>  
             <br>
               <div class="account-wall">
@@ -30,7 +30,7 @@
               </div>
               <div class="alert alert-info text-center">
                 <h4 class="text-center"><small><a href="https://www.lapinf.ufn.edu.br" target="_blank">Laboratório de Práticas</a><br>
-                Ciência da Computação e Sistemas de Informação</small></h4>
+                Sistemas de Informação</small></h4>
               <p><small>Disciplina Progrmação Python-Django - 2020-02</small></p>
             </div>
             <!-- <div class="alert alert-warning text-center">
