--- a/projeto/core/templates/core/includes/_menu_principal.html
+++ b/projeto/core/templates/core/includes/_menu_principal.html
@@ -21,16 +21,17 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% bootstrap_icon 'cog' %} Gestão básica <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{% url 'usuario_list' %}">Usuários</a></li>
-            <li><a href="">Cursos</a></li>
+            <li><a href="">Objetos pessoais</a></li>
             
           </ul>
         </li>
         
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% bootstrap_icon 'list-alt' %} Atas <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% bootstrap_icon 'list-alt' %} Empréstimos <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="">Gerar</a></li>
             <li><a href="#">Listar</a></li>
+            <li><a href="#">Notificar atrasos</a></li>
           </ul>
         </li> 
 
