--- a/projeto/core/templates/core/includes/_menu_principal.html
+++ b/projeto/core/templates/core/includes/_menu_principal.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'home' %}">SOGA</a>
+      <a class="navbar-brand" href="{% url 'home' %}">SEOP</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
