--- a/projeto/core/templates/core/includes/_menu_principal.html
+++ b/projeto/core/templates/core/includes/_menu_principal.html
@@ -21,7 +21,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% bootstrap_icon 'cog' %} Gestão básica <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{% url 'usuario_list' %}">Usuários</a></li>
-            <li><a href="">Objetos pessoais</a></li>
+            <li><a href="{% url 'objeto_list' %}">Objetos pessoais</a></li>
             
           </ul>
         </li>
