--- a/projeto/core/templates/core/includes/_menu_principal.html
+++ b/projeto/core/templates/core/includes/_menu_principal.html
@@ -29,8 +29,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% bootstrap_icon 'list-alt' %} Empréstimos <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="">Gerar</a></li>
-            <li><a href="#">Listar</a></li>
+            <li><a href="{% url 'emprestimo_list' %}">Gerar</a></li>
             <li><a href="#">Notificar atrasos</a></li>
           </ul>
         </li> 
