--- a/projeto/core/templates/core/about.html
+++ b/projeto/core/templates/core/about.html
@@ -13,11 +13,12 @@
          class="img-responsive"> -->
     </center>
 
-	<h3>Cursos Ciência da Computação e Sistemas de Informação</h3>
+	<h3>Curso Sistemas de Informação</h3>
 	<h4>Laboratório de Práticas</h4>
 	<h4>Versão:</h4>
 	<ul>
-		<li>1.0 de Setembro de 2020</li>	
+		<li>1.0 de Setembro de 2020</li>
+		<li>1.1 de Outubro de 2020</li>	
 	</ul>
 	<h4>Apoio:</h4>
 	<ul>
@@ -35,17 +36,14 @@
 				</ul>
 				<li>Alunos:</li>
 				<ul>
-					<li>Disciplina Tópico Avançados em Informática I - Ciência da Computação</li>
 					<li>Disciplina Programação Python - Sistemas de Informação</li>
 				</ul>
 			</ul>
-		
 	</ul>
 	<h4>
 		Consultoria:
 	</h4>
-		<ul> 
-			<li><a href="http://site.ersistemas.info/" target="_blank"> Empresa ER Sistemas</a> - Robertson Ebling dos Santos (egresso do curso de Sistemas de Informação)</li>
-		</ul>
-	
+	<ul> 
+		<li><a href="http://site.ersistemas.info/" target="_blank"> Empresa ER Sistemas</a> - Robertson Ebling dos Santos (egresso do curso de Sistemas de Informação)</li>
+	</ul>
 {% endblock %}
