permissões de acesso e filtro de objetos emprestados para o usuário logado

--- a/projeto/core/templates/core/base.html
+++ b/projeto/core/templates/core/base.html
@@ -17,7 +17,7 @@
 
 {% block bootstrap3_content %}
 	{% include 'core/includes/_menu_principal.html' %}
-    <div class="container">
+    <div class="container-fluid">
         <h1>{% block title %}(no title){% endblock %}</h1>
 
         {% autoescape off %}{% bootstrap_messages %}{% endautoescape %}
