--- a/projeto/usuario/templates/usuario/email/validacao_email.html
+++ b/projeto/usuario/templates/usuario/email/validacao_email.html
@@ -2,17 +2,17 @@
 {% load bootstrap3 %}
 
 {% block subject %}
-    {{ usuario.nome }}, bem-vindo(a) ao TFG ONLINE. Valide o seu cadastro!
+    {{ usuario.nome }}, bem-vindo(a) ao Sistema de Empréstimo de Objetos Pessoais. Valide o seu cadastro!
 {% endblock %}
 
 {% block html %}
     <br>
-    <h2>TFG ONLINE</h2>
-    <p>{{ usuario.nome }}, antes de utilizar a plataforma <strong>TFG ONLINE</strong> você precisa habilitar a sua conta.</p>
+    <h2>SEOP</h2>
+    <p>{{ usuario.nome }}, antes de utilizar a plataforma, você precisa habilitar a sua conta.</p>
     <p>Clique <a href='{{ usuario.get_usuario_register_activate_url }}'>aqui</a> para prosseguir.</a> </p>
     <br>
     <p>***** MENSAGEM GERADA AUTOMATICAMENTE. NÃO RESPONDA. *****</p>
     <br>
     <hr>
-    <p><small>Desenvolvido pelo Laboratório de Práticas da Computação UFN.</small></p>
+    <p><small>Desenvolvido pelos alunos de Sistemas de Informação.</small></p>
 {% endblock %}
